sub fix layout issue

--- a/src/es/components/organisms/wrapper/text-picture-cover-/text-picture-cover-.css
+++ b/src/es/components/organisms/wrapper/text-picture-cover-/text-picture-cover-.css
@@ -16,6 +16,7 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
+  width: 100%;
 }
 
 :host .o-wrapper__uppercase {
